--- a/layouts tividades/style.css
+++ b/layouts tividades/style.css
@@ -1,36 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
+
 *{
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    font-family:"inter";
 }
-.topo{
-    display: flex;
+
+.cabecalho{
     width: 100%;
     height: 71px;
     background-color: #3570b3;
-    margin-inline-start: center;
+
+    display: flex;
     align-items: center;
     justify-content: space-between;
-   
+    padding-left: 120px;
+    padding-right: 120px;
   
 }
-span{
+
+.logo{
     color: #ffffff;
-     justify-content: flex-start;
-    margin-inline-start: 100px;
+    text-decoration: none;
+    justify-content: flex-start;
+    
+     
     
 }
-.pagina a{
-    gap: 10px;
+.menu a{
+   
     color: #ffffff;
-    margin-inline-end: 80px;
-}
-.filme img{
-    margin-top: 60px;
-    width: 80%;
-    right: 4427px;
-}
-.conteiner{
-    justify-items: center;
+    margin-left: 18px;
+    text-decoration: none;
 }
 
+.conteiner{
+    padding-left: 120px;
+    padding-right: 120px;
+    
+}
+
+.filme{
+    background-image: url("./img/Rectangle\ 3.png");
+    width: 100%;
+    height: 427px;
+    background-size: cover;
+    background-position: center;
+    margin-top: 100px;
+}
+
+.conteiner h1{
+    margin-top: 80px;
+    font-size: 64px;
+    font-weight: normal;
+}
+
+.conteiner p{
+    font-size: 32px;
+}
