--- a/layouts tividades/style3.css
+++ b/layouts tividades/style3.css
@@ -1,63 +1,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-
-
 *{
-    padding: 0px;
-    margin: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family:"inter";
+    font-family: "inter";
 }
 
 .cabecalho{
     width: 100%;
     height: 71px;
     background-color: #3570b3;
-
     display: flex;
-    align-items: center;
-    justify-content: space-between;     /* mandar as class para as pontas */
+    justify-content: space-between;
     padding-left: 120px;
     padding-right: 120px;
-  
+    align-items: center; 
 }
 
 .logo a{
     color: #ffffff;
     text-decoration: none;
     justify-content: flex-start;
-    
-     
-    
 }
+
 .menu a{
-   
     color: #ffffff;
-    margin-left: 18px;
     text-decoration: none;
+   margin-left: 18px;
 }
 
-.conteiner{
-    padding-left: 120px;
-    padding-right: 120px;
-    
+.conteudo{
+   padding-left: 120px;
+   padding-right: 120px;
+   display: flex;
 }
 
-.filme{
-    background-image: url("./img/Rectangle\ 3.png");
-    width: 100%;
-    height: 427px;
+.foto{
+    margin-top: 100px;
+    background-image: url("./img/marvel.png.png");
+    width: 50%;
+    height: 460px;
     background-size: cover;
     background-position: center;
+    margin-right: 90px;
+}
+
+.texto{
     margin-top: 100px;
 }
 
-.conteiner h1{
-    margin-top: 80px;
+.texto h1{
     font-size: 64px;
     font-weight: normal;
-}
+ }
 
-.conteiner p{
+ .texto p{
+
     font-size: 32px;
-}
+ }
